# lsl-test

./: .gitignore  KNOWLEDGE_BASE.md  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
config/: calibration.yaml  sensor_config.yaml
examples/: generate_datasets.py  interactive_sync.py  visualize_sync.py
processing/: __init__.py  emg_envelope.py  imu_orientation.py
renderer/: __init__.py  digital_twin.py
sensors/: __init__.py  emg_outlet.py  imu_outlet.py  mocap_outlet.py
sync_engine/: __init__.py  calibration.py  ring_buffer.py  sync_engine.py  synced_frame.py
tests/: test_ring_buffer.py  test_sync_engine.py
tests/simulators/: __init__.py  emg_simulator.py  imu_simulator.py  mocap_simulator.py
